syntax = "proto3";
package raft;

option java_package = "rpc";
option java_outer_classname = "RaftProto";

import "google/protobuf/any.proto";

service RaftRPC {
  // The AppendEntries RPC defined in Figure 2
  rpc appendEntries(AppendRequest) returns (AppendResponse) {}
  // The RequestVote RPC defined in Figure 2
  rpc requestVote(VoteRequest) returns (VoteResponse) {}
}



/* This is the message for the log entry. As the system only supports put and get
* operations, hence it's defined in the Action. Moreover, we support multi-type key and value.
* Hence we use the Any as type to represent multi-type.
* For detailed info about any type, search on this page: https://protobuf.dev/programming-guides/proto3/#adding-more-message-types
*/
enum Action {
  PUT = 0;
  GET = 1;
}

message Entry {
  Action action = 1;
  string key = 2;
  // If it's a get message, then no value should be attached.
  int32 value = 3;
  int32 term = 4;
  int32 index = 5;
  bool isCommitted = 6;
}

message MetaData {
  int32 currentTerm = 1;
  int32 votedFor = 2;
}


message AppendRequest {
  // leader's term
  int32 term = 1;

  // leader ID
  int32 leaderID = 2;

  // index of log entry immediately preceding new ones
  int32 prevLogIndex = 3;

  // term of prevLogIndex entry
  int32 prevLogTerm = 4;

  // log entries to store (empty for heartbeat, may send more than one for efficiency)
  // Use repeated here to make it into a dynamically sized array (from 0 to inf) of entries.
  repeated Entry entries = 5;

  // leader's commitIndex
  int32 leaderCommit = 6;
}

message AppendResponse {
  // currentTerm, for leader to update itself.
  int32 term = 1;

  // true if follower contained entry matching prevLogIndex and prevLogTerm
  bool success = 2;
}

message VoteRequest {
  // candidate's term
  int32 term = 1;

  // candidate requesting vote
  int32 candidateID = 2;

  // index of candidate's last log entry.
  int32 lastLogIndex = 3;

  // term of candidate's last log entry.
  int32 lastLogTerm = 4;
}

message VoteResponse {
  // currentTerm, for candidate to update itself.
  int32 term = 1;

  // true means candidate receives vote.
  bool voteGranted = 2;
}
